--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* @import url('https://fonts.googleapis.com/css2?family=Caveat&family=Handlee&family=Marck+Script&family=Poppins:wght@300&display=swap'); */
